# pqc_demo

./: .dockerignore  .gitignore  MILESTONES.md  README.md
docker/: Dockerfile
docs/: AGENTIC_CAPABILITIES.md  FINAL_REPORT.md  RUN_DEMO_MANUAL.md  SAFE_TECH_DEMO_PLAYBOOK.md  m0_release_notes.md  m1_release_notes.md  m2_release_notes.md  m3_release_notes.md  m4_release_notes.md  m5_release_notes.md  m6_release_notes.md  m7_release_notes.md  release_policy.md
firmware/: CMakeLists.txt  STM32F769NIHx_FLASH.ld  toolchain.cmake  toolchain_container.cmake
firmware/Core/Inc/: crypto_harness.h  cycles.h  hal.h  main.h  mbedtls_config.h  stack_watermark.h
firmware/Core/Inc/mbedtls/: mbedtls_config.h
firmware/Core/Src/: crypto_harness.c  cycles.c  main.c  randombytes.c  stack_watermark.c  startup_stm32f769xx.s  syscalls.c
firmware/RSA/Inc/: bigint.h  rsa.h
firmware/RSA/Src/: bigint.c  rsa.c
scripts/: analyze_resources.py  build_container.ps1  flash.bat  generate_plots.py  generate_report.py  manual_log.txt  read_uart.ps1  resolve_symlinks.ps1  run_benchmarking_session.ps1  run_build.ps1  run_demo.ps1  update_report.py
